// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the html structure of the dynamic logo, backend configured 1`] = `
<body>
  <div>
    <div
      class="sc-5316f9e3-0 dSATvH justify-content-center row"
    >
      <div
        class="col-xl-6 col-lg-7 col-md-8 col-sm-12 col-12"
      >
        <div
          class="sc-5316f9e3-1 XtLyF"
        >
          <p
            class="sc-5316f9e3-2 kSgTpu className"
          >
            Test Site
          </p>
          <div
            class="sc-5316f9e3-3 ezSraS"
          >
            <img
              alt="logo-arrow"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="/arrow.svg"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
          <div
            class="sc-5316f9e3-4 sc-5316f9e3-5 oRHYX bKFJTo"
          >
            <div
              class="sc-e8045987-2 hXybIN rounded-lg shadow-lg ratio ratio-7x5"
            >
              <img
                alt="Card 6"
                class="sc-e8045987-1 iUafQq card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src=""
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
          <div
            class="sc-5316f9e3-4 sc-5316f9e3-6 oRHYX hmxnyD"
          >
            <div
              class="sc-e8045987-2 hXybIN rounded-lg shadow-lg ratio ratio-7x5"
            >
              <img
                alt="Card 1"
                class="sc-e8045987-1 iUafQq card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src=""
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
          <div
            class="sc-5316f9e3-4 sc-5316f9e3-7 oRHYX GtuOb"
          >
            <div
              class="sc-e8045987-2 hXybIN rounded-lg shadow-lg ratio ratio-7x5"
            >
              <img
                alt="Card 2"
                class="sc-e8045987-1 iUafQq card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src=""
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
          <div
            class="sc-5316f9e3-4 sc-5316f9e3-8 oRHYX ceQUcJ"
          >
            <div
              class="sc-e8045987-2 hXybIN rounded-lg shadow-lg ratio ratio-7x5"
            >
              <img
                alt="Card 3"
                class="sc-e8045987-1 iUafQq card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src=""
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
          <div
            class="sc-5316f9e3-4 sc-5316f9e3-9 oRHYX gxnxJn"
          >
            <div
              class="sc-e8045987-2 hXybIN rounded-lg shadow-lg ratio ratio-7x5"
            >
              <img
                alt="Card 4"
                class="sc-e8045987-1 iUafQq card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src=""
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`the html structure of the dynamic logo, no backend configured 1`] = `
<body>
  <div>
    <div
      class="sc-5316f9e3-0 dSATvH justify-content-center row"
    >
      <div
        class="col-xl-6 col-lg-7 col-md-8 col-sm-12 col-12"
      >
        <div
          class="sc-5316f9e3-1 XtLyF"
        >
          <p
            class="sc-5316f9e3-2 kSgTpu className"
          >
            MPC Autofill
          </p>
          <div
            class="sc-5316f9e3-3 ezSraS"
          >
            <img
              alt="logo-arrow"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="/arrow.svg"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
          <div
            class="sc-5316f9e3-4 sc-5316f9e3-5 oRHYX bKFJTo"
          >
            <div
              class="sc-e8045987-2 cmakOD rounded-lg shadow-lg ratio ratio-7x5"
            >
              <div
                class="d-flex justify-content-center align-items-center"
              >
                <div
                  class="sc-ff15f3e1-0 jebGLu spinner-border"
                  role="status"
                  size="4"
                >
                  <span
                    class="visually-hidden"
                  >
                    Loading...
                  </span>
                </div>
              </div>
              <img
                alt="Your Design Here"
                class="sc-e8045987-1 iUasor card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                sizes="100vw"
                src="/_next/image?url=%2Flogo-blank.png&w=3840&q=75"
                srcset="/_next/image?url=%2Flogo-blank.png&w=640&q=75 640w, /_next/image?url=%2Flogo-blank.png&w=750&q=75 750w, /_next/image?url=%2Flogo-blank.png&w=828&q=75 828w, /_next/image?url=%2Flogo-blank.png&w=1080&q=75 1080w, /_next/image?url=%2Flogo-blank.png&w=1200&q=75 1200w, /_next/image?url=%2Flogo-blank.png&w=1920&q=75 1920w, /_next/image?url=%2Flogo-blank.png&w=2048&q=75 2048w, /_next/image?url=%2Flogo-blank.png&w=3840&q=75 3840w"
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
          <div
            class="sc-5316f9e3-4 sc-5316f9e3-6 oRHYX hmxnyD"
          >
            <div
              class="sc-e8045987-2 cmakOD rounded-lg shadow-lg ratio ratio-7x5"
            >
              <div
                class="d-flex justify-content-center align-items-center"
              >
                <div
                  class="sc-ff15f3e1-0 jebGLu spinner-border"
                  role="status"
                  size="4"
                >
                  <span
                    class="visually-hidden"
                  >
                    Loading...
                  </span>
                </div>
              </div>
              <img
                alt="Your Design Here"
                class="sc-e8045987-1 iUasor card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                sizes="100vw"
                src="/_next/image?url=%2Flogo-blank.png&w=3840&q=75"
                srcset="/_next/image?url=%2Flogo-blank.png&w=640&q=75 640w, /_next/image?url=%2Flogo-blank.png&w=750&q=75 750w, /_next/image?url=%2Flogo-blank.png&w=828&q=75 828w, /_next/image?url=%2Flogo-blank.png&w=1080&q=75 1080w, /_next/image?url=%2Flogo-blank.png&w=1200&q=75 1200w, /_next/image?url=%2Flogo-blank.png&w=1920&q=75 1920w, /_next/image?url=%2Flogo-blank.png&w=2048&q=75 2048w, /_next/image?url=%2Flogo-blank.png&w=3840&q=75 3840w"
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
          <div
            class="sc-5316f9e3-4 sc-5316f9e3-7 oRHYX GtuOb"
          >
            <div
              class="sc-e8045987-2 cmakOD rounded-lg shadow-lg ratio ratio-7x5"
            >
              <div
                class="d-flex justify-content-center align-items-center"
              >
                <div
                  class="sc-ff15f3e1-0 jebGLu spinner-border"
                  role="status"
                  size="4"
                >
                  <span
                    class="visually-hidden"
                  >
                    Loading...
                  </span>
                </div>
              </div>
              <img
                alt="Your Design Here"
                class="sc-e8045987-1 iUasor card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                sizes="100vw"
                src="/_next/image?url=%2Flogo-blank.png&w=3840&q=75"
                srcset="/_next/image?url=%2Flogo-blank.png&w=640&q=75 640w, /_next/image?url=%2Flogo-blank.png&w=750&q=75 750w, /_next/image?url=%2Flogo-blank.png&w=828&q=75 828w, /_next/image?url=%2Flogo-blank.png&w=1080&q=75 1080w, /_next/image?url=%2Flogo-blank.png&w=1200&q=75 1200w, /_next/image?url=%2Flogo-blank.png&w=1920&q=75 1920w, /_next/image?url=%2Flogo-blank.png&w=2048&q=75 2048w, /_next/image?url=%2Flogo-blank.png&w=3840&q=75 3840w"
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
          <div
            class="sc-5316f9e3-4 sc-5316f9e3-8 oRHYX ceQUcJ"
          >
            <div
              class="sc-e8045987-2 cmakOD rounded-lg shadow-lg ratio ratio-7x5"
            >
              <div
                class="d-flex justify-content-center align-items-center"
              >
                <div
                  class="sc-ff15f3e1-0 jebGLu spinner-border"
                  role="status"
                  size="4"
                >
                  <span
                    class="visually-hidden"
                  >
                    Loading...
                  </span>
                </div>
              </div>
              <img
                alt="Your Design Here"
                class="sc-e8045987-1 iUasor card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                sizes="100vw"
                src="/_next/image?url=%2Flogo-blank.png&w=3840&q=75"
                srcset="/_next/image?url=%2Flogo-blank.png&w=640&q=75 640w, /_next/image?url=%2Flogo-blank.png&w=750&q=75 750w, /_next/image?url=%2Flogo-blank.png&w=828&q=75 828w, /_next/image?url=%2Flogo-blank.png&w=1080&q=75 1080w, /_next/image?url=%2Flogo-blank.png&w=1200&q=75 1200w, /_next/image?url=%2Flogo-blank.png&w=1920&q=75 1920w, /_next/image?url=%2Flogo-blank.png&w=2048&q=75 2048w, /_next/image?url=%2Flogo-blank.png&w=3840&q=75 3840w"
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
          <div
            class="sc-5316f9e3-4 sc-5316f9e3-9 oRHYX gxnxJn"
          >
            <div
              class="sc-e8045987-2 cmakOD rounded-lg shadow-lg ratio ratio-7x5"
            >
              <div
                class="d-flex justify-content-center align-items-center"
              >
                <div
                  class="sc-ff15f3e1-0 jebGLu spinner-border"
                  role="status"
                  size="4"
                >
                  <span
                    class="visually-hidden"
                  >
                    Loading...
                  </span>
                </div>
              </div>
              <img
                alt="Your Design Here"
                class="sc-e8045987-1 iUasor card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                sizes="100vw"
                src="/_next/image?url=%2Flogo-blank.png&w=3840&q=75"
                srcset="/_next/image?url=%2Flogo-blank.png&w=640&q=75 640w, /_next/image?url=%2Flogo-blank.png&w=750&q=75 750w, /_next/image?url=%2Flogo-blank.png&w=828&q=75 828w, /_next/image?url=%2Flogo-blank.png&w=1080&q=75 1080w, /_next/image?url=%2Flogo-blank.png&w=1200&q=75 1200w, /_next/image?url=%2Flogo-blank.png&w=1920&q=75 1920w, /_next/image?url=%2Flogo-blank.png&w=2048&q=75 2048w, /_next/image?url=%2Flogo-blank.png&w=3840&q=75 3840w"
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
